--- a/src/component/ContentCard/ContentCard.scss
+++ b/src/component/ContentCard/ContentCard.scss
@@ -2,22 +2,35 @@
 
 .root {
   width: 100%;
-  margin: 8px;
-  transition: opacity 0.1s ease-out 20ms;
-  &:hover {
-    opacity: 0.5;
-  }
-}
+  cursor: pointer;
+  //margin: 8px;
 
-.image {
-  width: 200px;
-  height: 300px;
-  overflow: hidden;
-  object-fit: cover;
-}
-.textOnImage {
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  .image {
+    width: 200px;
+    height: 300px;
+    margin-right: 16px;
+    overflow: hidden;
+    object-fit: cover;
+    transition: opacity 0.1s ease-out 20ms;
+    &:hover {
+      opacity: 0.5;
+    }
+  }
+  .image:hover + .textOnImage {
+    display: block;
+  }
+
+  .textOnImage {
+    top: 50%;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.2); /* Fallback color */
+    color: text-color;
+    width: 200px;
+    padding: 8px 8px;
+    text-align: center;
+    display: none;
+    &:hover {
+      display: block;
+    }
+  }
 }
